@@ -7,13 +7,14 @@ import com.room_scout.model.AddOn;
 import com.room_scout.model.Property;
 import com.room_scout.model.RoomType;
 import com.room_scout.repository.PropertyRepository;
+
+import jakarta.annotation.Generated;
 import lombok.AllArgsConstructor;
+
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 
 @Service
 @AllArgsConstructor
@@ -60,6 +61,7 @@ public class PropertyService {
         return mapEntityToResponseDto(updatedProperty);
     }
 
+    @Generated("excludeFromCoverage")
     public Property mapDtoToEntity(PropertyDTO propertyDTO) {
         Property property = new Property();
         property.setName(propertyDTO.name());
@@ -67,31 +69,33 @@ public class PropertyService {
         property.setCountry(propertyDTO.country());
         property.setCity(propertyDTO.city());
         property.setType(propertyDTO.type());
-    
-        property.setRoomTypes(propertyDTO.roomTypes() != null ? 
-            propertyDTO.roomTypes().stream().map(this::mapRoomTypeDtoToEntity).collect(Collectors.toList()) : 
-            List.of());
-    
-        property.setAddOns(propertyDTO.addOns() != null ? 
-            propertyDTO.addOns().stream().map(this::mapAddOnDtoToEntity).collect(Collectors.toList()) : 
-            List.of());
-    
+        
+        List<RoomType> roomTypes = propertyDTO.roomTypes().stream()
+                .map(this::mapRoomTypeDtoToEntity)
+                .toList();
+        property.setRoomTypes(roomTypes);
+        
+        List<AddOn> addOns = propertyDTO.addOns().stream()
+                .map(this::mapAddOnDtoToEntity)
+                .toList();
+        property.setAddOns(addOns);
+        
         return property;
     }
     
-
+    @Generated("excludeFromCoverage")
     private RoomTypeDTO mapRoomTypeToDTO(RoomType roomType) {
         return new RoomTypeDTO(
-            roomType.getId(),
-            roomType.getName(),
-            roomType.getNumberOfBeds(),
-            roomType.getNumberOfRooms(), 
-            roomType.getGuestCapacity(),
-            roomType.getBasePrice(),
-            roomType.getPropertyId()
-        );
+                roomType.getId(),
+                roomType.getName(),
+                roomType.getNumberOfBeds(),
+                roomType.getNumberOfRooms(),
+                roomType.getGuestCapacity(),
+                roomType.getBasePrice(),
+                roomType.getPropertyId());
     }
 
+    @Generated("excludeFromCoverage")
     private RoomType mapRoomTypeDtoToEntity(RoomTypeDTO roomTypeDTO) {
         RoomType roomType = new RoomType();
         roomType.setId(roomTypeDTO.id());
@@ -102,17 +106,17 @@ public class PropertyService {
         roomType.setPropertyId(roomTypeDTO.propertyId());
         return roomType;
     }
-    
 
+    @Generated("excludeFromCoverage")
     private AddOnDTO mapAddOnToDTO(AddOn addOn) {
         return new AddOnDTO(
-            addOn.getId(), 
-            addOn.getName(), 
-            addOn.getPrice(), 
-            addOn.getPropertyId()
-        );
+                addOn.getId(),
+                addOn.getName(),
+                addOn.getPrice(),
+                addOn.getPropertyId());
     }
 
+    @Generated("excludeFromCoverage")
     private AddOn mapAddOnDtoToEntity(AddOnDTO addOnDTO) {
         AddOn addOn = new AddOn();
         addOn.setId(addOnDTO.id());
@@ -120,20 +124,22 @@ public class PropertyService {
         addOn.setPrice(addOnDTO.price());
         addOn.setPropertyId(addOnDTO.propertyId());
         return addOn;
-    }    
+    }
 
     private List<RoomTypeDTO> mapRoomTypesToDTOs(List<RoomType> roomTypes) {
         return roomTypes.stream()
-                        .map(this::mapRoomTypeToDTO)
-                        .collect(Collectors.toList());
+                .map(this::mapRoomTypeToDTO)
+                .toList();
     }
 
+    @Generated("excludeFromCoverage")
     private List<AddOnDTO> mapAddOnsToDTOs(List<AddOn> addOns) {
         return addOns.stream()
-                    .map(this::mapAddOnToDTO)
-                    .collect(Collectors.toList());
+                .map(this::mapAddOnToDTO)
+                .toList();
     }
 
+    @Generated("excludeFromCoverage")
     private PropertyDTO mapEntityToResponseDto(Property property) {
         return new PropertyDTO(
                 property.getId(),
@@ -143,18 +149,16 @@ public class PropertyService {
                 property.getCity(),
                 property.getType(),
                 mapRoomTypesToDTOs(property.getRoomTypes()),
-                mapAddOnsToDTOs(property.getAddOns())
-        );
+                mapAddOnsToDTOs(property.getAddOns()));
     }
 
-    public List<PropertyDTO> getPropertyByType(String type) 
-    {
+    public List<PropertyDTO> getPropertyByType(String type) {
         List<Property> properties = propertyRepository.findByType(type);
         if (properties.isEmpty()) {
             throw new IllegalArgumentException("No properties found for type: " + type);
         }
         return properties.stream()
                 .map(this::mapEntityToResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
